Use consistent maintainer/url for packages
Signed-off-by: YAMAMOTO Takashi <yamamoto@midokura.com>
Change-Id: I2485e6cad97c5943a0a53080f8609f758cfd7dbf

--- a/midolman/build.gradle
+++ b/midolman/build.gradle
@@ -251,7 +251,7 @@ packaging {
                  '/etc/midolman/logback-minions.xml' ]
     fpmOpts = ['-a', 'all',
                '--category', 'network',
-               '--url', 'http://midokura.com',
+               '--url', 'https://www.midonet.org',
                '--epoch', '2']
 }
 
