--- a/midonet-cluster/build.gradle
+++ b/midonet-cluster/build.gradle
@@ -174,7 +174,7 @@ packaging {
                  '/etc/midonet-cluster/midonet-cluster-env.sh']
     fpmOpts = ['-a', 'all',
                '--category', 'network',
-               '--url', 'http://www.midonet.org',
+               '--url', 'https://www.midonet.org',
                '--epoch', '2']
 }
 
